[project]
name = "data_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "fastexcel>=0.16.0",
    "loguru>=0.7.3",
    "pandera[pandas]>=0.26.1",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
